--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@
 .idea/modules.xml
 .idea/vcs.xml
 .idea/workspace.xml
+*.xml
+*.iml
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j.lock
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/work-products.bin
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/query-cache.bin
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/dep-graph.bin
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/5afb1blb41wtz2ya.o
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/58agit5zya1o6mih.o
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/4n3if07b7yej0kp6.o
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/4gg800j2dwcnk5do.o
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/2zip2xlnsb2926t8.o
+hamlex_os/target/debug/incremental/hamlex_os-12ntnkx3vf22f/s-fetd4tevpv-pr8a9j-1a87xf0f4cxei/13dtvtmiubd92ga8.o
+hamlex_os/target/debug/hamlex_os.dSYM
+hamlex_os/target/debug/hamlex_os.d
+hamlex_os/target/debug/hamlex_os
+hamlex_os/target/debug/deps/hamlex_os-b9f2dda4c12f0927.dSYM/Contents/Resources/DWARF/hamlex_os-b9f2dda4c12f0927
+hamlex_os/target/debug/deps/hamlex_os-b9f2dda4c12f0927.dSYM/Contents/Info.plist
+hamlex_os/target/debug/deps/hamlex_os-b9f2dda4c12f0927.d
+hamlex_os/target/debug/deps/hamlex_os-b9f2dda4c12f0927
+hamlex_os/target/debug/.fingerprint/hamlex_os-b9f2dda4c12f0927/invoked.timestamp
+hamlex_os/target/debug/.fingerprint/hamlex_os-b9f2dda4c12f0927/dep-bin-hamlex_os-b9f2dda4c12f0927
+hamlex_os/target/debug/.fingerprint/hamlex_os-b9f2dda4c12f0927/bin-hamlex_os-b9f2dda4c12f0927.json
+hamlex_os/target/debug/.fingerprint/hamlex_os-b9f2dda4c12f0927/bin-hamlex_os-b9f2dda4c12f0927
+hamlex_os/target/debug/.cargo-lock
+hamlex_os/target/.rustc_info.json
