--- a/hamlex_os/Cargo.toml
+++ b/hamlex_os/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hamlex_os"
 version = "0.1.0"
-authors = ["nick_posix <top_secret>"]
+authors = ["nick_posix", "gregv2"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
